--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,14 +14,14 @@
         android:text="WE FEED"
         android:textSize="55sp"
         android:textStyle="bold"
-        android:textColor="#C5CBE3"
+        android:textColor="@color/black"
         android:layout_marginStart="0dp"
         android:paddingStart="20dp"
         android:paddingEnd="100dp"
         android:paddingTop="30dp"
         android:paddingBottom="0dp"
 
-        >
+        tools:ignore="MissingConstraints">
 
     </TextView>
     <TextView
@@ -31,149 +31,104 @@
         android:text="Catering for the needy in the society!"
         android:textSize="15sp"
         android:textStyle="italic"
-        android:textColor="#C5CBE3"
+        android:textColor="@color/black"
         android:layout_marginStart="100dp"
         app:layout_constraintTop_toBottomOf="@+id/header"
         android:paddingStart="20dp"
         android:paddingEnd="90dp"
         android:paddingTop="10dp"
-        android:paddingBottom="20dp">
+        android:paddingBottom="20dp"
+        tools:ignore="MissingConstraints">
 
     </TextView>
 
     <EditText
-        android:id="@+id/txt_fullName"
+        android:id="@+id/login_email"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginTop="60dp"
         android:backgroundTint="@color/black"
-        android:ems="20"
-        android:hint="@string/enter_your_full_name"
-        android:inputType="text"
-        android:paddingTop="0dp"
-        android:textColor="#C5CBE3"
-        android:textColorHint="@color/black"
-        android:textSize="24sp"
-        android:drawableStart="@drawable/ic_person_black"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/header2"
-        tools:layout_editor_absoluteY="155dp">
-
-    </EditText>
-
-    <EditText
-        android:id="@+id/txt_email"
-        android:layout_width="320dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:backgroundTint="@color/black"
+        android:drawableStart="@drawable/ic_email_black"
         android:ems="10"
         android:hint="@string/enter_your_email_address"
         android:inputType="textEmailAddress"
-        android:textColor="#C5CBE3"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="24sp"
-        android:drawableStart="@drawable/ic_email_black"
-        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_fullName">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header2">
 
     </EditText>
 
     <EditText
-        android:id="@+id/txt_password"
+        android:id="@+id/login_password"
         android:layout_width="320dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:backgroundTint="@color/black"
+        android:drawableStart="@drawable/ic_security_black"
         android:ems="10"
         android:hint="@string/enter_your_password"
         android:inputType="textPassword"
-        android:textColor="#C5CBE3"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="24sp"
-        android:drawableStart="@drawable/ic_security_black"
-        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_email"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_email"
         app:passwordToggleEnabled="true" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@+id/txt_password"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RadioButton
-            android:id="@+id/restaurant"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Restaurant Manager"
-            />
-
-
-        <RadioButton
-            android:id="@+id/event"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Event Organiser"
-            />
-        <RadioButton
-            android:id="@+id/children"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Care Facility Manager"
-            />
-    </RadioGroup>
-
-
     <Button
-        android:id="@+id/signIn"
+        android:id="@+id/login_button"
         android:layout_width="320dp"
         android:layout_height="59dp"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="#1F2833"
         android:text="@string/login"
         android:textColor="#C5CBE3"
         android:textSize="26sp"
         android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_password" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="onClick"
+        app:layout_constraintTop_toBottomOf="@+id/login_password" />
 
     <TextView
         android:id="@+id/forgotpassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="32dp"
+        android:paddingStart="20dp"
         android:text="@string/forgot_password"
-        android:textColor="#C5CBE3"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:paddingStart="20dp"
-        app:layout_constraintHorizontal_bias="0.3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signIn" />
+        app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
     <TextView
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#CFCBE3"
-        android:layout_marginStart="75dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginLeft="56dp"
+        android:layout_marginTop="32dp"
         android:text="@string/register"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/forgotpassword"
-        app:layout_constraintTop_toBottomOf="@+id/signIn" />
+        app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
     <ProgressBar
         android:id="@+id/progressBar"
