--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -16,6 +16,7 @@
         android:hint="@string/enter_your_email_address"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:textColorHint="@color/black"
         android:inputType="textEmailAddress"
         android:textSize="24sp"
         android:drawableStart="@drawable/ic_email_black"
